--- a/webserver-config.ini
+++ b/webserver-config.ini
@@ -8,9 +8,9 @@ bind.port=80
 [Database]
 mysql.hostname=127.0.0.1
 mysql.port=3306
-mysql.username=havana
-mysql.password=verysecret
-mysql.database=havana
+mysql.username=root
+mysql.password=123
+mysql.database=keplerdev
 
 [Template]
 template.directory=tools/www-tpl
