--- a/Kepler-Server/build.gradle
+++ b/Kepler-Server/build.gradle
@@ -9,10 +9,6 @@ apply plugin: 'application'
 sourceCompatibility = "1.12"
 targetCompatibility = "1.12"
 
-def grpcVersion = '1.12.0'
-def protobufVersion = '3.5.1'
-def protocVersion = '3.5.1-1'
-
 mainClassName = 'org.alexdev.kepler.Kepler'
 
 jib {
@@ -35,20 +31,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.bhlangonijr:chesslib:1.1.1'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    compile 'com.maxmind.geoip2:geoip2:2.12.0'
 
     // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '2.7.4'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
 
     // https://mvnrepository.com/artifact/io.netty/netty-all
-    implementation group: 'io.netty', name: 'netty-all', version: '4.1.5.Final'
+    implementation group: 'io.netty', name: 'netty-all', version: '4.1.33.Final'
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
@@ -62,24 +54,20 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2
     implementation group: 'org.apache.commons', name: 'commons-configuration2', version: '2.2'
 
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
+    // https://mvnrepository.com/artifact/commons-lang/commons-lang
+    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
+
     // https://mvnrepository.com/artifact/commons-validator/commons-validator
     implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
 
-    implementation "com.goterl.lazycode:lazysodium-java:3.3.0"
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
-    implementation "com.google.api.grpc:proto-google-common-protos:1.0.0"
-    implementation "io.grpc:grpc-alts:${grpcVersion}"
-    implementation "io.grpc:grpc-netty:${grpcVersion}"
-    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
-    implementation "io.grpc:grpc-stub:${grpcVersion}"
-    implementation "io.grpc:grpc-services:${grpcVersion}"
-    compileOnly "javax.annotation:javax.annotation-api:1.2"
-
-    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
-
-    testImplementation "io.grpc:grpc-testing:${grpcVersion}"
-
-    implementation name: 'RetroRCON-1.1'
+    implementation 'com.goterl.lazycode:lazysodium-java:3.3.0'
+    implementation 'com.github.bhlangonijr:chesslib:1.1.1'
 }
 
 // Create fat jar with libraries inside of it.
