--- a/Kepler-Server/build.gradle
+++ b/Kepler-Server/build.gradle
@@ -54,9 +54,7 @@ dependencies {
 
     implementation 'com.goterl.lazycode:lazysodium-java:3.3.0'
     implementation 'com.github.bhlangonijr:chesslib:1.1.1'
-
-    // https://mvnrepository.com/artifact/at.favre.lib/bcrypt
-    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+    implementation name: 'bcrypt-0.9.0'
 }
 
 // Create fat jar with libraries inside of it.
