--- a/Kepler-Server/build.gradle
+++ b/Kepler-Server/build.gradle
@@ -16,7 +16,7 @@ repositories {
         dirs 'libs'
     }
 
-    maven { url  "https://dl.bintray.com/terl/lazysodium-maven" }
+    maven { url 'https://dl.bintray.com/terl/lazysodium-maven' }
     maven { url 'https://jitpack.io' }
     mavenCentral()
 }
@@ -54,7 +54,9 @@ dependencies {
 
     implementation 'com.goterl.lazycode:lazysodium-java:3.3.0'
     implementation 'com.github.bhlangonijr:chesslib:1.1.1'
+
     implementation name: 'bcrypt-0.9.0'
+    implementation name: 'bcrypt-cli-0.9.0-full'
 }
 
 // Create fat jar with libraries inside of it.
