--- a/Kepler-Server/build.gradle
+++ b/Kepler-Server/build.gradle
@@ -1,7 +1,3 @@
-plugins {
-    id "org.jetbrains.intellij" version "0.3.5"
-}
-
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -16,7 +12,6 @@ repositories {
         dirs 'libs'
     }
 
-    maven { url 'https://dl.bintray.com/terl/lazysodium-maven' }
     maven { url 'https://jitpack.io' }
     mavenCentral()
 }
@@ -52,7 +47,9 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-validator/commons-validator
     implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
 
-    implementation 'com.goterl.lazycode:lazysodium-java:3.3.0'
+    implementation 'com.goterl:lazysodium-java:5.0.1'
+    implementation "net.java.dev.jna:jna:5.8.0"
+
     implementation 'com.github.bhlangonijr:chesslib:1.1.1'
 
     implementation name: 'bcrypt-0.9.0'
@@ -62,6 +59,7 @@ dependencies {
 // Create fat jar with libraries inside of it.
 task fatJar(type: Jar) {
     zip64 true
+    duplicatesStrategy 'exclude'
     manifest {
         attributes 'Main-Class': mainClassName
     }
@@ -73,7 +71,8 @@ task fatJar(type: Jar) {
 // Create jar with no libraries inside of it, used when creating with "gradle distZip" and
 // libraries are then to be stored in the folder next to it called 'dependency-jars'
 // https://vocon-it.com/2016/11/15/how-to-build-a-lean-jar-file-with-gradle/
-jar {
+
+/*jar {
     manifest {
         attributes (
                 'Main-Class': mainClassName,
@@ -82,4 +81,4 @@ jar {
                 }.join(' dependency-jars/')
         )
     }
-}
+}*/
