--- a/Kepler-Server/build.gradle
+++ b/Kepler-Server/build.gradle
@@ -1,8 +1,3 @@
-plugins {
-    id 'com.google.cloud.tools.jib' version '0.9.8'
-    id "org.jetbrains.intellij" version "0.3.5"
-}
-
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -37,14 +32,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'net.java.dev.jna', name: 'jna', version: '5.1.0'
-
-    implementation 'com.github.bhlangonijr:chesslib:1.1.1'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-
     // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '2.7.4'
 
@@ -72,15 +59,19 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-validator/commons-validator
     implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
 
-    implementation 'com.goterl.lazycode:lazysodium-java:3.3.0'
+    implementation 'com.goterl:lazysodium-java:5.0.1'
+    implementation "net.java.dev.jna:jna:5.8.0"
+
     implementation 'com.github.bhlangonijr:chesslib:1.1.1'
 
-    testImplementation "io.grpc:grpc-testing:${grpcVersion}"
+    implementation name: 'bcrypt-0.9.0'
+    implementation name: 'bcrypt-cli-0.9.0-full'
 }
 
 // Create fat jar with libraries inside of it.
 task fatJar(type: Jar) {
     zip64 true
+    duplicatesStrategy 'exclude'
     manifest {
         attributes 'Main-Class': mainClassName
     }
@@ -92,7 +83,8 @@ task fatJar(type: Jar) {
 // Create jar with no libraries inside of it, used when creating with "gradle distZip" and
 // libraries are then to be stored in the folder next to it called 'dependency-jars'
 // https://vocon-it.com/2016/11/15/how-to-build-a-lean-jar-file-with-gradle/
-jar {
+
+/*jar {
     manifest {
         attributes (
                 'Main-Class': mainClassName,
@@ -101,4 +93,4 @@ jar {
                 }.join(' dependency-jars/')
         )
     }
-}
+}*/
