--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,7 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - 'master'
+  workflow_dispatch:
 
 jobs:
   docker:
@@ -33,3 +31,15 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ghcr.io/webbanditten/kepler:latest
+          
+      - 
+        name: Download the latest
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.KEY_PASS }}
+          script: |
+            whoami
+            ls -al
