Update and rename docker-image.yml to build-and-push-docker.yml

--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: build-and-push-docker
 
 on:
   workflow_dispatch:
@@ -32,17 +32,3 @@ jobs:
           push: true
           tags: ghcr.io/webbanditten/kepler:latest
   
-  download-and-run: 
-      runs-on: ubuntu-latest
-      steps:
-          - 
-            name: Download the latest
-            uses: appleboy/ssh-action@master
-            with:
-              host: ${{ secrets.HOST }}
-              username: ${{ secrets.USERNAME }}
-              key: ${{ secrets.KEY }}
-              passphrase: ${{ secrets.KEY_PASS }}
-              script: |
-                whoami
-                ls -al
