--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew fatJar
       - name: Rename files
-        run: cp Client/build/libs/Client-all.jar Kelpler.jar
+        run: cp Client/build/libs/Kepler-all.jar Kepler.jar
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
