--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -22,6 +22,9 @@ jobs:
           cache: gradle
       - name: Build with Gradle
         run: ./gradlew fatJar
+      - id: sha-short
+        name: Get short SHA
+        run: echo "::set-output name=sha-short::$(git rev-parse --short HEAD)"
       - name: Rename files
         run: cp Kepler-Server/build/libs/Kepler-Server-all.jar Kepler-${{ steps.sha-short.outputs.sha-short }}.jar
       - uses: "marvinpinto/action-automatic-releases@latest"
