--- a/Kepler-Server/build.gradle
+++ b/Kepler-Server/build.gradle
@@ -9,9 +9,6 @@ java {
 mainClassName = 'org.alexdev.kepler.Kepler'
 
 repositories {
-    flatDir {
-        dirs 'libs'
-    }
     maven { url 'https://jitpack.io' }
     mavenCentral()
 }
@@ -50,9 +47,14 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
+    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.7.3'
+
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
+
     implementation 'com.github.bhlangonijr:chesslib:1.1.1'
-    implementation 'com.goterl:lazysodium-java:5.0.1'
-    implementation "net.java.dev.jna:jna:5.8.0"
+
 }
 
 // Create fat jar with libraries inside of it.
