--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -20,18 +20,34 @@ jobs:
           java-version: 11
           distribution: 'adopt'
           cache: gradle
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build with Gradle
         run: ./gradlew fatJar
+
       - id: sha-short
         name: Get short SHA
         run: echo "::set-output name=sha-short::$(git rev-parse --short HEAD)"
-      - name: Rename files
-        run: cp Kepler-Server/build/libs/Kepler-Server-all.jar Kepler-${{ steps.sha-short.outputs.sha-short }}.jar
-      - uses: "marvinpinto/action-automatic-releases@latest"
+
+      - name: Copy jar to latest release
+        run: cp -rf Kepler-Server/build/libs/Kepler-Server-all.jar dist/Kepler-Server-all.jar
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build ${{ steps.sha-short.outputs.sha-short }}"
-          files: |
-            Kepler-${{ steps.sha-short.outputs.sha-short }}.jar
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GH_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          tags: ghcr.io/webbanditten/kepler:${{ steps.sha-short.outputs.sha-short }}
